nat.tf
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "my_eip"
  }
}

resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.nat.id
  subnet_id     = values(aws_subnet.public)[0].id

  tags = {
    Name = "my_nat_gateway"
  }
}
